# ChR_project

./: CMakeLists.txt  LICENSE.md  README.md  ReadMe.md  efficiency.csv  initialization.mac  projectCppFile.cpp  refractive_index_data.txt  run1.mac  run2.mac  version changes.md  vis.mac
Cherenkov_app/: CMakeLists.txt  theMain.cpp
Cherenkov_app/include/: ActionInitialization.hh  ActionInitialization.hpp  DefsNConsts.hh  DefsNConsts.hpp  DetectorConstruction.hh  DetectorConstruction.hpp  DetectorConstruction_Messenger.hh  DetectorConstruction_Messenger.hpp  EventAction.hpp  PhysicsList.hh  PhysicsList.hpp  PhysicsList_Messenger.hh  PhysicsList_Messenger.hpp  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hpp  PrimaryGeneratorAction_Messenger.hh  PrimaryGeneratorAction_Messenger.hpp  ProcessCsvData.hpp  RunAction.hh  RunAction.hpp  StackingAction.hh  StackingAction.hpp  SteppingAction.hh  SteppingAction.hpp  SteppingAction_Messenger.hh  SteppingAction_Messenger.hpp  TrackingAction.hh  TrackingAction.hpp  UnitsAndBench.hpp
Cherenkov_app/source/: ActionInitialization.cc  ActionInitialization.cpp  DetectorConstruction.cc  DetectorConstruction.cpp  DetectorConstruction_Messenger.cc  DetectorConstruction_Messenger.cpp  EventAction.cpp  PhysicsList.cc  PhysicsList.cpp  PhysicsList_Messenger.cc  PhysicsList_Messenger.cpp  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction_Messenger.cc  PrimaryGeneratorAction_Messenger.cpp  RunAction.cc  RunAction.cpp  StackingAction.cc  StackingAction.cpp  SteppingAction.cc  SteppingAction.cpp  SteppingAction_Messenger.cc  SteppingAction_Messenger.cpp  TrackingAction.cc  TrackingAction.cpp
Cherenkov_process/: CMakeLists.txt
Cherenkov_process/include/: G4AccessPhysicsVectors.hh  G4BaseChR_Model.hh  G4ChRPhysicsTableData.hh  G4CherenkovProcess.hh  G4CherenkovProcess_Messenger.hh  G4ExtraOpticalParameters.hh  G4ExtraOpticalParameters_Messenger.hh  G4OpticalPhysics_option1.hh  G4OpticalPhysics_option2.hh  G4StandardChRProcess_Messenger.hh  G4StandardChR_Model.hh  G4StandardCherenkovProcess.hh  G4ThinTargetChR_Model.hh  GlobalFunctions.hh  SomeGlobalNamespace.hh
Cherenkov_process/source/: G4BaseChR_Model.cc  G4CherenkovProcess.cc  G4CherenkovProcess_Messenger.cc  G4ExtraOpticalParameters.cc  G4ExtraOpticalParameters_Messenger.cc  G4OpticalPhysics_option1.cc  G4OpticalPhysics_option2.cc  G4StandardChRProcess_Messenger.cc  G4StandardChR_Model.cc  G4StandardCherenkovProcess.cc  G4ThinTargetChR_Model.cc  GlobalFunctions.cc  SomeGlobalNamespace.cc
my_cpps/: ActionInitialization.cpp  AlmostOriginalChR_Model.cpp  BaseChR_Model.cpp  CherenkovProcess.cpp  DetectorConstruction.cpp  DetectorConstruction_Messenger.cpp  EventAction.cpp  MyOpticalPhysics.cpp  PhysicsList.cpp  PhysicsList_Messenger.cpp  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction_Messenger.cpp  RunAction.cpp  StackingAction.cpp  SteppingAction.cpp  SteppingAction_Messenger.cpp  TrackingAction.cpp
my_headers/: AccessPhysicsVectors.hpp  ActionInitialization.hpp  AlmostOriginalChR_Model.hpp  BaseChR_Model.hpp  CherenkovProcess.hpp  CherenkovProcess_Messenger.hpp  DefsNConsts.hpp  DetectorConstruction.hpp  DetectorConstruction_Messenger.hpp  EventAction.hpp  MyOpticalParameters.hpp  MyOpticalParameters_Messenger.hpp  MyOpticalPhysics.hpp  PhysicsList.hpp  PhysicsList_Messenger.hpp  PrimaryGeneratorAction.hpp  PrimaryGeneratorAction_Messenger.hpp  ProcessCsvData.hpp  RunAction.hpp  StackingAction.hpp  SteppingAction.hpp  SteppingAction_Messenger.hpp  TammThinTarget_Model.hpp  TrackingAction.hpp  UnitsAndBench.hpp  thePCM_Model.hpp
